gnome-bg: objects without a filename are not slideshows

https://bugzilla.gnome.org/show_bug.cgi?id=702010